<resources>
    <string name="app_name">Sekini</string>
    <string name="please_wait">Please Wait</string>
    <string name="ok">Ok</string>
    <string name="retry">Retry</string>
    <string name="sync_english_word">Synchronized English Words</string>
    <string name="sync_delete_items">Synchronized Delete Items</string>
    <string name="sync_categories">Synchronized Categories</string>
    <string name="sync_sekani_dictionary">Synchronized Sekani Dictionary</string>
    <string name="sync_sekani_forms">Synchronized Sekani Forms</string>
    <string name="sync_sekani_levels">Synchronized Sekani Levels</string>
    <string name="sync_sekani_root_images">Synchronized Sekani Images</string>
    <string name="sync_sekani_roots_english_words">Synchronized Sekani Roots English Words</string>
    <string name="sync_sekani_roots_topics">Synchronized Sekani Roots Topics</string>
    <string name="sync_sekani_roots">Synchronized Sekani Roots</string>
    <string name="sync_sekani_word_attributes">Synchronized Sekani Word Attributes</string>
    <string name="sync_sekani_word_audios">Synchronized Sekani Word Audios</string>
    <string name="sync_sekani_word_example_audios">Synchronized Sekani Word Example Audios</string>
    <string name="sync_sekani_word_examples">Synchronized Sekani Word Examples</string>
    <string name="sync_sekani_words">Synchronized Sekani Words</string>
    <string name="sync_topics">Synchronized Topics </string>
    <string name="sync_sekani_category">Synchronized Category</string>
    <string name="cancel">Cancel</string>
    <string name="attention">Attention</string>
    <string name="prompt_sync_message">Your application is not synced. You can sync it now by clicking the sync button or do it later from settings.</string>
    <string name="sync_background">Sync Background</string>
    <string name="sync">Sync</string>
    <string name="sync_complete">Sync Completed</string>
    <string name="sync_service_is_runnig">Sync service is running</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="try_sync">Try sync</string>
    <string name="try_a_more_general_keyword">Try a more general keyword</string>
    <string name="no_result">No result</string>
    <string name="dash">-</string>
    <string name="welcome_to_rpk">Welcome to RPK</string>
    <string name="sign_in">S I G N I N</string>
    <string name="password">PASSWORD</string>
    <string name="username">USERNAME</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="home">Home</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="login">Login</string>
    <string name="game1">Game1</string>
    <string name="point">point</string>
    <string name="check">Check</string>
    <string name="game_1_image">Game 1 Image</string>
    <string name="speaker_image">speaker_image</string>
    <string name="your_win">Your Win!</string>
    <string name="your_lose">Your lose</string>
    <string name="incorrect">Incorrect</string>
    <string name="game1_completed_title">End of this level</string>
    <string name="game1_completed_desc">Do you want play again?</string>
    <string name="correct">Correct</string>
    <string name="lamp">lamp</string>
    <string name="life">life</string>
    <string name="loading_dialog">Loading Dialog</string>
    <string name="word_matcher">Word Matcher</string>
    <string name="quick_minds">Quick Minds</string>
    <string name="dictionary">Dictionary</string>
    <string name="exit_prompt">Are you sure you want to exit the game?</string>
    <string name="sekani">Sekani</string>
    <string name="english">English</string>
    <string name="login_logout">login_logout</string>
    <string name="login_success">Login Successful</string>
    <string name="logout">L O G O U T</string>
    <string name="sekani_to_english">Sekani To English</string>
    <string name="english_to_sekani">English To Sekani</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="games">Games</string>
    <string name="loginGame">Games (Login Required)</string>
    <string name="normalGame">Games</string>
    <string name="match_the_words">Match the words</string>
    <string name="try_again">Try Again</string>
    <string name="attempt_one">Attempt 1/2</string>
    <string name="attempt_two">Attempt 2/2</string>
    <string name="next">Next</string>
    <string name="attempt_one_point">100 point + 20 bonus</string>
    <string name="attempt_two_point">100 point</string>
    <string name="internet_disconnects">Internet disconnects</string>
    <string name="check_internet_try_again">Please check internet and try again.</string>
    <string name="no_life">No Life</string>
    <string name="please_come_back_tomorrow">Please come back tomorrow</string>
    <string name="reset_life"> Set Life 5</string>
    <string name="sync_error">Error while sync</string>
    <string name="please_login_again">Please Login Again</string>

</resources>
