<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.sekini.ui.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:tint="@color/red_300"
                app:srcCompat="@drawable/small_logo" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/welcome_to_rpk"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/red_300"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/sign_in_to_continue"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/blue_grey_300" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/blue_grey_200" />

            <android.support.design.widget.TextInputEditText
                app:error="@{viewModel.userNameError}"
                android:text="@={viewModel.userName}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/blue_grey_800"
                android:theme="@style/EditText.Red" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/blue_grey_200" />

            <android.support.design.widget.TextInputEditText
                app:error="@{viewModel.passwordError}"
                android:text="@={viewModel.password}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/blue_grey_800"
                android:theme="@style/EditText.Red" />


            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mxlarge" />

            <Button
                android:onClick="@{() -> viewModel.connect()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/ic_btn_game"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_medium" />

            <!--<LinearLayout-->
            <!--android:id="@+id/sign_up_for_account"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="@dimen/spacing_medium"-->
            <!--android:gravity="center"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="SIGN UP FOR AN ACCOUNT?"-->
            <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"-->
            <!--android:textColor="@color/blue_grey_400" />-->


            <!--</LinearLayout>-->

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_xlarge" />

        </LinearLayout>

    </RelativeLayout>
</layout>